--- a/branch-prac/branch.html
+++ b/branch-prac/branch.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
-    
+    <!-- <script type="text/javascript" src="branch-prac1.js"></script> -->
+    <!-- <script type="text/javascript" src="branch-prac2.js"></script> -->
+     <script type="text/javascript" src="brnch-prac3.js"></script>
 </body>
 </html>
