--- a/array-prac/array.html
+++ b/array-prac/array.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="text/javascript" src="array-prac1.js"></script>
+    <!-- <script type="text/javascript" src="array-prac1.js"></script>
     <script type="text/javascript" src="array-prac2.js"></script>
-    <script type="text/javascript" src="array-prac3.js"></script>
+    <script type="text/javascript" src="array-prac3.js"></script> -->
     <script type="text/javascript" src="array-prac4.js"></script>
 </body>
 </html>
