--- a/func-prac/func.html
+++ b/func-prac/func.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="text/javascript" src="func-prac1.js"></script>
-    <script type="text/javascript" src="func-prac2.js"></script>
-    <script type="text/javascript" src="func-prac3.js"></script>
+    <!-- <script type="text/javascript" src="func-prac1.js"></script> -->
+    <!-- <script type="text/javascript" src="func-prac2.js"></script> -->
+    <!-- <script type="text/javascript" src="func-prac3.js"></script> -->
     <script type="text/javascript" src="func-prac4.js"></script>    
 </body>
 </html>
