--- a/event1-prac/prac2/event1-prac2.html
+++ b/event1-prac/prac2/event1-prac2.html
@@ -12,6 +12,7 @@
             <th>商品名</th>
             <th>価格</th>
             <th>個数</th>
+            <th>小計</th> 
         </tr>
         <tr>
             <td>switch</td>
@@ -31,6 +32,7 @@
                     <option value="10">10</option>
                 </select>
             </td>
+            <td class="item-total">0</td> 
         </tr>
         <tr>
             <td>PS5</td>
@@ -50,9 +52,10 @@
                     <option value="10">10</option>
                 </select>
             </td>
+            <td class="item-total">0</td> 
         </tr>
     </table>
-    <h2>合計: <span id="total">0</span>円</h2>
+    <h2>合計: <span id="total">0</span></h2>
     <script type="text/javascript" src="event1-prac2.js"></script>
 </body>
 </html>
